src/test/deca/context/valid/decaObjet/cast/01floatInt.deca
// Description:
//    test valid context de field declaration
//
// Resultats:
//    01floatInt.lis
//
// Historique:
//    cree le 20/06/2022

{
    int x = 2;
    float y = (float)(x);
}